--- a/public/index.html
+++ b/public/index.html
@@ -28,8 +28,18 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+
+
+
+    <script async defer src="https://tools.luckyorange.com/core/lo.js?site-id=31dbab85"></script>
+
   </head>
   <body>
+
+
+
+
+    
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
